hphp/test/slow/reified-generics/constant-fold.php.expectf
dict(1) {
  ["kind"]=>
  int(1)
}
dict(2) {
  ["kind"]=>
  int(15)
  ["classname"]=>
  string(1) "C"
}

Fatal error: when resolving anonymous type structure, class D not found in %s/test/slow/reified-generics/constant-fold.php on line 14
